@@ -16,6 +16,7 @@
 - fix null cache race.
 - fix cache_init() on source re-read.
 - reset negative status on cache prune.
+- remove state machine timed wait.
 
 03/09/2009 autofs-5.0.5
 -----------------------
